<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lab_enter_number"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:hint="@string/lab_enter_message"
        android:inputType="textMultiLine"
        android:minLines="10" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/lab_send" />

</LinearLayout>